tests/baselines/reference/typeFromPropertyAssignment.errors.txt
a.js(10,1): error TS2454: Variable 'si' is used before being assigned.
a.js(13,1): error TS2454: Variable 'oi' is used before being assigned.


==== a.js (2 errors) ====
    var Outer = class O {
        m(x, y) { }
    }
    Outer.Inner = class I {
        n(a, b) { }
    
    }
    /** @type {Outer} */
    var si
    si.m
    ~~
!!! error TS2454: Variable 'si' is used before being assigned.
    /** @type {Outer.Inner} */
    var oi
    oi.n
    ~~
!!! error TS2454: Variable 'oi' is used before being assigned.
    
    